// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TotalCost /> check render with customClasses = testclass provided 1`] = `
<span
  className="testclass"
>
  Total cost: 100
</span>
`;

exports[`<TotalCost /> check render without customClasses provided 1`] = `
<span
  className=""
>
  Total cost: 100
</span>
`;
